--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-particles": "^2.12.2",
     "rippleui": "^1.12.1",
     "tailwindcss": "3.3.3",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
