--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pretty-quick": "pretty-quick"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.3",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
