--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-particles": "^2.12.2",
     "rippleui": "^1.12.1",
+    "svix": "^1.10.0",
     "tailwindcss": "3.3.3",
     "tsparticles-slim": "^2.12.0",
     "typescript": "5.2.2"
