--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-particles": "^2.12.2",
     "rippleui": "^1.12.1",
     "svix": "^1.10.0",
+    "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "tsparticles-slim": "^2.12.0",
     "typescript": "5.2.2"
