--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "pretty-quick": "pretty-quick"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.2",
     "@prisma/client": "^5.2.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "argon2": "^0.31.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
-    "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-particles": "^2.12.2",
@@ -36,6 +37,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "prisma": "^5.2.0"
   }
 }
