--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
     "@prisma/client": "^5.2.0",
+    "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -28,7 +29,6 @@
     "react-particles": "^2.12.2",
     "rippleui": "^1.12.1",
     "svix": "^1.10.0",
-    "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "tsparticles-slim": "^2.12.0",
     "typescript": "5.2.2"
