--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "svix": "^1.10.0",
     "tailwindcss": "3.3.3",
     "tsparticles-slim": "^2.12.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "husky": "^8.0.3",
