--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tailwindcss": "3.3.3",
     "tsparticles-slim": "^2.12.0",
     "typescript": "5.2.2",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "husky": "^8.0.3",
