--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uidotdev/usehooks": "^2.2.0",
+    "@vercel/analytics": "^1.0.2",
     "argon2": "^0.31.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
