--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "pretty-quick": "pretty-quick"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.2",
-    "@prisma/client": "^5.2.0",
+    "@auth/prisma-adapter": "^1.0.15",
+    "@prisma/client": "^5.8.1",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -24,7 +24,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.4",
     "next": "^14.0.4",
-    "next-auth": "^4.23.1",
+    "next-auth": "^5.0.0-beta.5",
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,6 +42,6 @@
     "lint-staged": "^14.0.1",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
-    "prisma": "^5.2.0"
+    "prisma": "^5.8.1"
   }
 }
