--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@types/react-dom": "18.2.7",
     "@uidotdev/usehooks": "^2.2.0",
     "@vercel/analytics": "^1.0.2",
-    "argon2": "^0.31.1",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.4",
+    "lucide-react": "^0.312.0",
     "next": "^14.0.4",
     "next-auth": "^5.0.0-beta.5",
     "postcss": "8.4.29",
@@ -31,13 +34,16 @@
     "react-particles": "^2.12.2",
     "rippleui": "^1.12.1",
     "svix": "^1.10.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles-slim": "^2.12.0",
     "typescript": "5.2.2",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^2.8.8",
