--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "prebuild": "prisma generate",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.2",
-    "@prisma/client": "^5.2.0",
+    "@auth/prisma-adapter": "^1.4.0",
+    "@prisma/client": "^5.10.2",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uidotdev/usehooks": "^2.2.0",
-    "argon2": "^0.31.1",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
-    "next-auth": "^4.23.1",
+    "next-auth": "5.0.0-beta.13",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +38,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^2.8.8",
