--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "prebuild": "prisma generate",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
     "pretty-quick": "pretty-quick"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.4.0",
-    "@prisma/client": "^5.10.2",
+    "@auth/prisma-adapter": "^1.5.0",
+    "@prisma/client": "^5.11.0",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uidotdev/usehooks": "^2.2.0",
+    "adapters": "link:@types/@auth/core/adapters",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
-    "next-auth": "5.0.0-beta.13",
+    "next-auth": "5.0.0-beta.15",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +32,7 @@
     "rippleui": "^1.12.1",
     "svix": "^1.10.0",
     "tailwindcss": "3.3.3",
+    "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
     "typescript": "5.2.2",
     "zod": "^3.22.2",
