--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "lottie-react": "^2.4.0",
     "next": "13.4.19",
     "next-auth": "5.0.0-beta.15",
     "postcss": "8.4.29",
